--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ i.fas.fa-info{
 .section{
     background-color: #F2F2F2;
     border-radius: 20px;
+    height: 680px;
 }
 
 .section h3 a{
@@ -245,7 +246,6 @@ i.fas.fa-info{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 90%;
     padding: 0;
 }
 
