--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ header img{
 header a{
     width: 160px;
     height: 100px;
-    border-top: 2px solid #F2F2F2;
     text-align: center;
     vertical-align: middle;
     line-height: 100px;
@@ -435,6 +434,7 @@ li{
         height: auto;
         margin-left: 0;
         margin-top: 20px;
+        border-radius: 0px;
     }
 
     .popular .list{
@@ -570,6 +570,11 @@ li{
     }
 
     /* Filtres */
+
+    .filters b{
+        display: block;
+        margin-bottom: 16px;
+    }
 
     .filter_block{
         margin-bottom: 16px;
